fix: horizontal scroll in burger menu

--- a/src/common/components/Header/BurgerMenu/BurgerMenu.module.scss
+++ b/src/common/components/Header/BurgerMenu/BurgerMenu.module.scss
@@ -34,10 +34,10 @@
     align-items: center;
     justify-content: space-between;
 
-    width: 100%;
+    width: 98%;
     height: 76px;
     margin-bottom: 20%;
-    padding: 0 1.5rem;
+    padding: 0;
 }
 
 .closeIcon {
@@ -95,7 +95,7 @@
     cursor: pointer;
 
     width: 100%;
-    padding: 10px 20px;
+    padding: 10px 0;
 
     font: normal 500 13px Jost;
     color: #161412;
